Fix add news only if you have user, delete news only admin, modal responsive (dark mode & sign out), general responsive fixes

--- a/src/app/noticias/detalle/detalle.module.css
+++ b/src/app/noticias/detalle/detalle.module.css
@@ -72,3 +72,14 @@
     display: block;
     transition: all 0.5s;
 }
+
+#bin{
+    cursor: pointer;
+    padding: 5px;
+    transition: .5s;
+    border-radius: 50px;
+}
+
+#bin:hover{
+    background-color: white;
+}
