--- a/src/components/_common/navbar/modalNavbar/modalNavbar.module.css
+++ b/src/components/_common/navbar/modalNavbar/modalNavbar.module.css
@@ -60,3 +60,24 @@
         display: flex;
     }
 }
+
+@media (max-width: 800px) {
+    #modalNavbar a{
+        font-size: 24px;
+    }
+}
+
+
+#modalNavbar button{
+    min-width: 40%;
+    display: inline-block;
+    background: #fff;
+    color: black;
+    border: none;
+    padding: 8px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 18px;
+    transition: .5s linear;
+}
